crates/elenchus-parser/tests/snapshots/errors__rule_body_not_an_implication.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"RULE r:\\n    EXCLUSIVE\\n        x a\\n        x b\\n\")"
---
Syntax Error at line 2, col 1: a rule body must be WHEN ... THEN
  |     EXCLUSIVE
  | ^--- here
